# fast_api_zero

./: database.db  pyproject.toml
fast_api_zero/: app.py  database.py  schemas.py
migrations/: env.py
migrations/versions/: 6742886f42d4_create_users_table.py  7a2035b04cce_add_field_update_at_in_users_table.py  b251bea84b27_update_field_update_at_in_users_table.py
tests/: conftest.py  test_app.py  test_db.py
